--- a/style.css
+++ b/style.css
@@ -1,4 +1,15 @@
+*{
+    margin: 0;
+    padding: 0;
+}
+
 body{
+    height: 100vh;
     background-color: black;
     color: white;
 }
+
+.titulo-destaque{
+    color: darkred;
+}
+
