Added new image and styles

--- a/style.css
+++ b/style.css
@@ -27,7 +27,7 @@ body{
     display: flex;
     flex-direction: column;
     gap: 40px;
-    
+
 }
 
 .apresentacao__conteudo__titulo{
@@ -43,17 +43,36 @@ body{
 .apresentacao__links{
     display: flex;
     justify-content: space-between;
+    flex-direction: column;
+    align-items: center;
+    gap: 32px;
+}
+
+.apresentacao__links__subtitulo{
+    font-family: 'Krona One', sans-serif;
+    font-weight: 400;
+    font-size: 24px;
 }
 
 .apresentacao__links__link{
-    background-color: #22d4fd;
+    /* background-color: #22d4fd; */
+    display: flex;
+    justify-content: center;
+    gap: 16px;
+    border: 2px solid #22d4fd;
     width: 280px;
     text-align: center;
-    border-radius: 16px;
+    border-radius: 8px;
     font-size: 24px;
     padding: 21.5px 0;
     text-decoration: none;
-    color: #000;
+    color: #f6f6f6;
     font-family: 'montserrat', sans-serif;
     font-weight: 600;
+}
+
+.apresentacao__links__link:hover{
+    background-color: #272727;
+    transform: scale(1.05);
+    transition: all 0.5s;
 }
