--- a/styles/style.css
+++ b/styles/style.css
@@ -1,42 +1,46 @@
 @import url('https://fonts.googleapis.com/css2?family=Krona+One&family=Montserrat:wght@400;600&display=swap');
 
+:root{
+    --cor-primaria: #000000;
+    --cor-secundaria: #f6f6f6;
+    --cor-terciaria: #950101;
+    --cor-quartenaria: #ea1300;
+    --cor-hover: #272727;
+
+    --fonte-primaria:'Krona one', sans-serif;
+    --fonte-secundaria:'Montserrat', sans-serif; 
+}
+
 *{
     margin: 0;
     padding: 0;
 }
 
 body{
-    /* height: 100vh; */
-    background-color: black;
-    color: white;
     box-sizing: border-box;
+    background-color: var(--cor-primaria);
+    color: var(--cor-secundaria);
 }
-
+.cabecalho{
+    padding: 2% 0% 0% 15%;
+}
 .cabecalho__menu{
     display: flex;
     gap: 80px;
 }
-
 .cabecalho__menu__link{
-    font-family: 'Montserrat', sans-serif;
-    font-weight: 600;
+    font-family: var(--fonte-secundaria);
     font-size: 24px;
-    color: darkred;
-    padding: 2% 0% 0% 15%;
+    font-weight: 600;
+    color: var(--cor-terciaria);
     text-decoration: none;
 }
-
-.titulo-destaque{
-    color: darkred;
-}
-
 .apresentacao{
-    padding: 8% 15%;
-    display:flex;
+    padding: 5% 15%;
+    display: flex;
     align-items: center;
-    justify-content:space-between;
+    justify-content: space-between;
 }
-
 .apresentacao__conteudo{
     width: 615px;
     display: flex;
@@ -46,57 +50,52 @@ body{
 
 .apresentacao__conteudo__titulo{
     font-size: 36px;
-    font-family: 'Krona One', sans-serif;
+    font-family: var(--fonte-primaria);
 }
-
+.titulo-destaque{
+    color: var(--cor-terciaria);
+}
 .apresentacao__conteudo__texto{
     font-size: 24px;
-    font-family: 'Montserrat', sans-serif;
+    font-family: var(--fonte-secundaria);
 }
 
 .apresentacao__links{
     display: flex;
-    justify-content: space-between;
     flex-direction: column;
+    justify-content: space-between;
     align-items: center;
     gap: 32px;
 }
-
 .apresentacao__links__subtitulo{
-    font-family: 'Krona One', sans-serif;
+    font-family: var(--fonte-primaria);
     font-weight: 400;
     font-size: 24px;
 }
-
 .apresentacao__links__link{
-    /* background-color: #22d4fd; */
     display: flex;
     justify-content: center;
     gap: 16px;
-    border: 2px solid #22d4fd;
-    width: 280px;
+    border: 2px solid var(--cor-terciaria);
+    width: 378px;
     text-align: center;
     border-radius: 8px;
     font-size: 24px;
+    font-weight: 600;
     padding: 21.5px 0;
     text-decoration: none;
-    color: #f6f6f6;
-    font-family: 'montserrat', sans-serif;
-    font-weight: 600;
+    color: var(--cor-secundaria);
+    font-family: var(--fonte-secundaria);
 }
-
 .apresentacao__links__link:hover{
-    background-color: #272727;
-    transform: scale(1.05);
-    transition: all 0.5s;
+    background-color: var(--cor-hover);
 }
-
 .rodape{
+    color: var(--cor-primaria);
+    background-color: var(--cor-terciaria);
     padding: 24px;
-    color: black;
-    background-color: darkred;
     text-align: center;
-    font-family: 'Montserrat', sans-serif;
+    font-family: var(--fonte-secundaria);
     font-size: 24px;
     font-weight: 400;
 }
