--- a/styles/style.css
+++ b/styles/style.css
@@ -21,13 +21,21 @@ body{
     background-color: var(--cor-primaria);
     color: var(--cor-secundaria);
 }
+
 .cabecalho{
     padding: 2% 0% 0% 15%;
 }
+
+.cabecalho__menu__link:hover{
+    transform: scale(1.1);
+    transition: 0.1s;
+}
+
 .cabecalho__menu{
     display: flex;
     gap: 80px;
 }
+
 .cabecalho__menu__link{
     font-family: var(--fonte-secundaria);
     font-size: 1.5rem;
@@ -35,11 +43,27 @@ body{
     color: var(--cor-terciaria);
     text-decoration: none;
 }
+
+.destaque-texto{
+    color: var(--cor-terciaria);
+}
+
+.link-certificado{
+    text-decoration:underline;
+    color: var(--cor-secundaria);
+}
+
+.link-certificado:hover{
+    color: var(--cor-terciaria);
+    transition: all 0.5s;
+}
+
 .apresentacao{
     padding: 5% 15%;
     display: flex;
     align-items: center;
     justify-content: space-between;
+    gap: 82px;
 }
 .apresentacao__conteudo{
     width: 50%;
@@ -52,9 +76,7 @@ body{
     font-size: 2.25rem;
     font-family: var(--fonte-primaria);
 }
-.titulo-destaque{
-    color: var(--cor-terciaria);
-}
+
 .apresentacao__conteudo__texto{
     font-size: 1.5rem;
     font-family: var(--fonte-secundaria);
@@ -67,11 +89,13 @@ body{
     align-items: center;
     gap: 32px;
 }
+
 .apresentacao__links__subtitulo{
     font-family: var(--fonte-primaria);
     font-weight: 400;
     font-size: 1.5rem;
 }
+
 .apresentacao__links__navegacao{
     display: flex;
     justify-content: center;
@@ -87,8 +111,11 @@ body{
     color: var(--cor-secundaria);
     font-family: var(--fonte-secundaria);
 }
+
 .apresentacao__links__navegacao:hover{
     background-color: var(--cor-hover);
+    transform: scale(1.1);
+    transition: all 0.1s;
 }
 
 .apresentacao_imagem{
@@ -103,4 +130,24 @@ body{
     font-family: var(--fonte-secundaria);
     font-size: 1.5rem;
     font-weight: 400;
+}
+
+@media (max-width: 1200px) {
+    .cabecalho{
+        padding: 10%;
+    }
+    
+    .cabecalho__menu{
+        justify-content: center;
+    }
+
+    .apresentacao{
+        flex-direction: column-reverse;
+        padding: 5%;
+    }
+
+    .apresentacao__conteudo{
+        width: auto;
+    }    
+
 }
