--- a/styles/style.css
+++ b/styles/style.css
@@ -58,6 +58,14 @@ body{
     transition: all 0.5s;
 }
 
+.apresentacao-curriculo{
+    padding: 5% 5%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 82px;
+}
+
 .apresentacao{
     padding: 5% 15%;
     display: flex;
